--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -114,12 +114,15 @@ font-size: larger;
   @media (max-width: 767px){
     .sidebar-toggle{
   display: none;
+},
+.btn-div{
+  margin-top: 10px;
 }
   }
 </style>
 <script>
   const mapToken = "<%= process.env.MAP_TOKEN %>";
-  const listing = <%- JSON.stringify(listing || {}) %>
+  const listing = <%-JSON.stringify(listing || {}) %>
 </script>
 
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
@@ -137,8 +140,10 @@ font-size: larger;
         <p>₹<%= listing.price.toLocaleString("en-IN") %></p>
         <p><a href="https://www.google.com/search?q=<%= listing.title %> &nbsp;<%= listing.location  %>" target="_blank">Let's Go <i class="fa-sharp fa-solid fa-location-dot"></i></a> &nbsp; <%= listing.location %></p>
         <p><%= listing.country %></p>
+        
         <% if (reqUser && listing.owner._id.equals(reqUser._id)) { %>
-        <div class="btn-div ">
+          
+        <div class="btn-div">
             <div><button class="submit edit btn-outline-dark"><a href="/listings/<%= listing._id %>/edit">Edit</a></button></div>
             <div class="delete">
                 <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
@@ -147,11 +152,11 @@ font-size: larger;
             </div>
         </div>
         <% } %>
-         
+          
     </div>
 
-    <hr class="mt-3 mb-3">
-    <br><br><br><br>
+    <br><br>
+    <hr>
     
 <div class="col-8  mb-3" id="mapBox">
   <h3>Where you'll be</h3>
